Team 1 and Team 2

--- a/public/config.html
+++ b/public/config.html
@@ -130,11 +130,11 @@
         </label>
         <div class="grid">
           <label>
-            Team code to back with YES (Home button)
+            Team 1 code (Home button → YES on this team)
             <input type="text" id="yesTeamCode" placeholder="DEN" />
           </label>
           <label>
-            Team code to back with YES on Away button
+            Team 2 code (Away button → YES on this team)
             <input type="text" id="noTeamCode" placeholder="HOU" />
           </label>
         </div>
